--- a/package.json
+++ b/package.json
@@ -23,6 +23,6 @@
     "gh-pages": "^2.0.0"
   },
 
-  "homepage": "https://laroccacharly.github.io/website-laroc",
+  "homepage": "https://laroccacharly.github.io/website-laroc"
 
 }
